Fixes #20 to receive Base64 encoder from java util API